[package]
name = "yabfi"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "Yet another brainfuck interpreter."
repository = "https://github.com/miintTeaa/yabfi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
